# ChemClaw-Lab

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT_LOG.md  PROJECT_STATUS.md  PROJECT_STATUS_CN.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_improvement.md  feature_request.md
agents/: agent_a_inventory.md  agent_b_memory.md  agent_c_planning.md  audit_layer.md  orchestrator.md
benchmark/: annotation_notes.md  task_overview.md
demo_data/: chemclaw_lab.db  lab_seed.json
docs/: architecture.md  benchmark.md  deployment_guidance.md  index.md  next_steps.md  open_source_strategy.md  openclaw_setup.md  repository_structure.md  roadmap.md  schema.md  system_overview.md
paper/: draft_text.md  paper_outline.md
scripts/: bootstrap_demo.sh
slides/: figure_prompt_nature_style.md  one_page_pitch.md
src/chemclaw_lab/: cli.py  db.py  schema.py  seed.py
src/chemclaw_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli_smoke.py
